--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "co-body": "^4.0.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
-    "eslint": "^1.5.1",
+    "babel-cli": "^6.6.5",
+    "babel-eslint": "^5.0.0",
+    "babel-preset-es2015": "^6.6.0",
+    "eslint": "^2.2.0",
     "eslint-config-next": "^0.1.0",
-    "koa": "^1.1.1",
-    "universal-log": "^0.3.0"
+    "koa": "^1.2.0",
+    "universal-log": "^0.3.6"
   }
 }
