--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "compile": "babel src --out-dir lib",
     "prepublish": "npm run compile",
-    "release": "npm run lint && npm run compile && npm test && (git checkout --quiet master && test -z \"$(git status --porcelain)\" && npm version $npm_config_release_type && git push --follow-tags) || echo \"An error occured (unclean repository?)\"",
+    "release": "npm run lint && npm run compile && npm test && (git checkout --quiet master && test -z \"$(git status --porcelain)\" && npm version $npm_config_release_type && git push --follow-tags) || echo \"An error occurred (uncommitted changes?)\"",
     "release-patch": "npm run release --release-type=patch",
     "release-minor": "npm run release --release-type=minor",
     "release-major": "npm run release --release-type=major",
@@ -24,11 +24,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.0",
     "babel-preset-es2015": "^6.6.0",
-    "eslint": "^2.2.0",
-    "eslint-config-next": "^0.1.0",
+    "eslint": "^2.5.3",
+    "eslint-config-next": "^0.1.12",
     "koa": "^1.2.0",
-    "universal-log": "^0.3.6"
+    "universal-log": "^0.3.9"
   }
 }
