Use package.json 'files' field instead of .npmignore

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Server for UniversalLog remote output",
   "author": "Manuel Vila <mvila@3base.com>",
   "license": "MIT",
+  "files": [
+    "lib"
+  ],
   "main": "lib/index.js",
   "repository": {
     "type": "git",
